examples/opensearch/manifests/aiops-nexus-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiops-nexus
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aiops-nexus
  template:
    metadata:
      labels:
        app: aiops-nexus
    spec:
      containers:
      - name: aiops-nexus
        image: ghcr.io/techednelson/aiops-nexus:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: aiops-nexus
  namespace: app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: aiops-nexus
