examples/opensearch/manifests/unhealthy-app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unhealthy-app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unhealthy-app
  template:
    metadata:
      labels:
        app: unhealthy-app
    spec:
      containers:
      - name: unhealthy-app
        image: webtechnelson/unhealthy-app:1.0.0
        imagePullPolicy: Always
        ports:
          - containerPort: 5001

---
apiVersion: v1
kind: Service
metadata:
  name: unhealthy-app
  namespace: app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5001
  selector:
    app: unhealthy-app
