examples/opensearch/manifests/ingress-nginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: app
  labels:
    app: nginx-ingress
    release:  nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /unhealthy-app
          pathType: Prefix
          backend:
            service:
              name: unhealthy-app
              port:
                number: 80
        - path: /api/alert
          pathType: Prefix
          backend:
            service:
              name: aiops-nexus
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: opensearch-dashboards
              port:
                number: 5601
